# FastyFileManager

./: Cargo.toml  README.md  build.bat  build.sh  package-lock.json
src/: app.rs  config.rs  config.toml  icons.rs  main.rs  theme.rs  ui.rs
