[package]
name = "ffm"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast terminal file manager with three-panel layout, fuzzy search, multi-select, and full keyboard control"
license = "MIT"
repository = "https://github.com/SMOLDEVI/FastyFileManager"
homepage = "https://github.com/SMOLDEVI/FastyFileManager"
keywords = ["file-manager", "tui", "terminal", "ratatui", "file-explorer"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
crossterm = "0.29.0"

ratatui = "0.30.0-beta.0"
open = "5.3.3"
serde = { version = "1.0.228", features = ["default", "derive"] }
toml = "0.9.10"
directories = "6.0.0"
sysinfo = "0.37.2"
